# server/routes/REST_routes/technical.route.js
@@ -7,10 +7,10 @@ const {
   deleteTechnicalController,
 } = require("../../controllers/technical.controller");
 const validate = require("../../middlewares/schema.middleware");
-// const {
-//   TechnicalCreateSchema,
-//   TechnicalUpdateSchema,
-// } = require("../../schemas/Technical.schema");
+const {
+  TechnicalCreateSchema,
+  TechnicalUpdateSchema,
+} = require("../../schemas/technical.schema");
 
 module.exports = (Router) => {
   const router = Router();
@@ -18,10 +18,16 @@ module.exports = (Router) => {
   router
     .get("/technicals", getAllTechnicalsController)
     .get("/technical/:id", getTechnicalByIdController)
-    // .post("/technical", validate(TechnicalCreateSchema), createTechnicalController)
-    // .put("/technical/:id", validate(TechnicalUpdateSchema), updateTechnicalController)
-    .post("/technical", createTechnicalController)
-    .put("/technical/:id", updateTechnicalController)
+    .post(
+      "/technical",
+      validate(TechnicalCreateSchema),
+      createTechnicalController
+    )
+    .put(
+      "/technical/:id",
+      validate(TechnicalUpdateSchema),
+      updateTechnicalController
+    )
     .delete("/technical/:id", deleteTechnicalController);
 
   return router;
