# swagger_documentation.json
@@ -2,10 +2,10 @@
   "swagger": "2.0",
   "info": {
     "version": "1.0.0",
-    "title": "Sa Payments Fintech API",
-    "description": "Documentação da API da Connect Sa Payments Fintech"
+    "title": "HelpDesk API",
+    "description": "Documentação da API da HelpDesk"
   },
-  "host": "localhost:3009",
+  "host": "localhost:3010",
   "basePath": "/",
   "schemes": [
     "http",
@@ -26,7 +26,7 @@
     "application/json"
   ],
   "paths": {
-    "/user/auth": {
+    "/client/auth": {
       "post": {
         "description": "",
         "parameters": [
@@ -37,10 +37,10 @@
               "type": "object",
               "properties": {
                 "username": {
-                  "example": "any"
+                  "example": "String"
                 },
                 "password": {
-                  "example": "any"
+                  "example": "String"
                 }
               }
             }
@@ -49,9 +49,6 @@
         "responses": {
           "200": {
             "description": "OK"
-          },
-          "401": {
-            "description": "Unauthorized"
           }
         }
       },
@@ -65,64 +62,13 @@
               "type": "object",
               "properties": {
                 "name": {
-                  "example": "any"
-                },
-                "documento": {
-                  "example": "any"
-                },
-                "birthDate": {
-                  "example": "any"
-                },
-                "senha": {
-                  "example": "any"
-                },
-                "confirmarSenha": {
-                  "example": "any"
+                  "example": "String"
                 },
                 "email": {
-                  "example": "any"
+                  "example": "String"
                 },
-                "telefone": {
-                  "example": "any"
-                },
-                "estado": {
-                  "example": "any"
-                },
-                "cep": {
-                  "example": "any"
-                },
-                "rua": {
-                  "example": "any"
-                },
-                "numero": {
-                  "example": "any"
-                },
-                "complemento": {
-                  "example": "any"
-                },
-                "bairro": {
-                  "example": "any"
-                },
-                "cidade": {
-                  "example": "any"
-                },
-                "photo0": {
-                  "example": "any"
-                },
-                "photo1": {
-                  "example": "any"
-                },
-                "photo2": {
-                  "example": "any"
-                },
-                "photo3": {
-                  "example": "any"
-                },
-                "motherName": {
-                  "example": "any"
-                },
-                "referencia": {
-                  "example": "any"
+                "password": {
+                  "example": "String"
                 }
               }
             }
@@ -131,18 +77,106 @@
         "responses": {
           "200": {
             "description": "OK"
-          },
-          "401": {
-            "description": "Unauthorized"
-          },
-          "500": {
-            "description": "Internal Server Error"
           }
         }
       }
     },
-    "/auth/change/password": {
+    "/clients": {
+      "get": {
+        "description": "",
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        }
+      }
+    },
+    "/technicals": {
+      "get": {
+        "description": "",
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
+    "/technical/{id}": {
+      "get": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      },
       "put": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "nome": {
+                  "example": "String"
+                },
+                "cpf": {
+                  "example": "String"
+                },
+                "email": {
+                  "example": "String"
+                },
+                "password": {
+                  "example": "String"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      },
+      "delete": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "No Content"
+          },
+          "400": {
+            "description": "Bad Request"
+          }
+        }
+      }
+    },
+    "/technical": {
+      "post": {
         "description": "",
         "parameters": [
           {
@@ -151,22 +185,35 @@
             "schema": {
               "type": "object",
               "properties": {
+                "nome": {
+                  "example": "String"
+                },
                 "cpf": {
-                  "example": "any"
+                  "example": "String"
+                },
+                "email": {
+                  "example": "String"
                 },
                 "password": {
-                  "example": "any"
+                  "example": "String"
                 }
               }
             }
           }
         ],
         "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "500": {
-            "description": "Internal Server Error"
+          "201": {
+            "description": "Created"
+          }
+        }
+      }
+    },
+    "/tickets": {
+      "get": {
+        "description": "",
+        "responses": {
+          "default": {
+            "description": ""
           }
         }
       }
